@@ -1,5 +1,6 @@
 version 9.0.
 date: dd/mm/yyyy
+  * added the possibility to open/close all projects with a single service
   * added support for guessing a default repository configuration when creating a version dump in the default
     location (i.e. same as the core repository)
   * use an embedded unicode font (arial unicode ms) in PDF generated by invokable reporters and skos diff
